service.yml
apiVersion: v1
kind: Service
metadata:
  name: eks-app-service             # Name of the Service
spec:
  selector:
    app: eks-app                    # Select pods with label app=eks-app
  ports:
  - protocol: TCP
    port: 80                        # Service is reachable inside cluster on port 80
    targetPort: 5000                # Forwards to container's port 5000
  type: ClusterIP                   # Only accessible inside the cluster
