ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eks-app-ingress             # Name of the Ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /   # Rewrite URL paths to root /
spec:
  ingressClassName: nginx           # Says: this Ingress is managed by nginx ingress controller
  rules:
  - http:
      paths:
      - path: /                     # For requests to /
        pathType: Prefix
        backend:
          service:
            name: eks-app-service   # Forward traffic to service named eks-app-service
            port:
              number: 80            # On the service's port 80
